--- a/hasil.html
+++ b/hasil.html
@@ -53,7 +53,7 @@
       <h4>Kontak</h4>
       <p>Email: info@testgula.id</p>
       <p>Telepon: +62 123 4567 890</p>
-      <p>Alamat: Jl. Kesehatan No. 123, Jaakarta</p>
+      <p>Alamat: Jl. Kesehatan No. 123, Jakarta</p>
     </div>
   </footer>
 
